--- a/old/package.json
+++ b/old/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "wine-quality",
   "version": "1.0.0",
@@ -7,7 +8,7 @@
   "scripts": {
     "test": "mocha"
   },
-  "author": "Diego Santos, Jean Bauer",
+  "author": "Diego Santos, Jean Bauer, Palmer Oliveira",
   "bin": {
     "redeMLP": "./bin/index.js"
   }
